# All-Hail-Chaos

./: .deepsource.toml  .gitignore  .travis.yml  Chaotic Bot.py  LICENSE  Lavalink.bat  PRIVACY.md  README.md  application.yml  bot.py  database.sql  execute_me.py  pyproject.toml  requirements.txt  setup.cfg  setup.sh  startup.sh  stats.sql
.github/: CODEOWNERS
cogs/: animals.py  bataille_navale.py  battleship.py  business.py  coronavirus.py  currency.py  custom.py  funny.py  games.py  image.py  moderation.py  music.py  music_old.py  nasa.py  owner.py  success.py  tags.py  utility.py
cogs/utils/: shellreader.py
data/: Excuses.txt  blagues.txt  business_data.py  config.toml  data_example.py  deaths.txt  morts.txt  paillard.txt  questions.txt  success_data.py  weapons.txt
systemd/: chaotic.service  ipblock.service  lavalink.service
utils/: paginators.py  shellreader.py
